modified folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-data/questions_data.csv
-data/answers_data.csv
-data/config.json
+Data
+DataQuery/config.json
 wordembeddings/idf.csv
 wordembeddings/w2v_model.bin
