--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -6,3 +6,4 @@ AnswerSearch/IDF/idf.csv
 AnswerSearch/Word2Vec/word2vec.model*
 AnswerSearch/Word2Vec/corpus.txt
 AnswerSearch/*/__pycache__
+node_modules
