--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:extension.searchPyStackBot"
+    "onCommand:extension.searchPyStackBot",
+    "onCommand:extension.getTerminalLog"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -22,6 +23,10 @@
       {
         "command": "extension.searchPyStackBot",
         "title": "PyStackBot: Search"
+      },
+      {
+        "command": "extension.getTerminalLog",
+        "title": "PyStackBot: terminalLog"
       }
     ],
     "keybindings": [
@@ -29,6 +34,11 @@
         "command": "extension.searchPyStackBot",
         "key": "ctrl+alt+d",
         "mac": "ctrl+cmd+s"
+      },
+      {
+        "command": "extension.getTerminalLog",
+        "key": "ctrl+alt+e",
+        "mac": "ctrl+cmd+e"
       }
     ]
   },
